--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "forever server.js",
+    "worker": "node worker.js",
     "dev": "nodemon worker.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "heroku-postbuild": "[ $NODE_ENV != test ] && yarn build || exit 0"
   },
   "dependencies": {
     "array.prototype.flatmap": "^1.2.1",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "forever": "^0.15.3",
     "node-fetch": "^2.1.2",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
