--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "forever": "^0.15.3",
+    "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
