--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "register-service-worker": "^1.0.0",
     "sequelize": "^4.38.0",
     "vue": "^2.5.16",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
