--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google-cloud/vision": "^0.20.0",
     "array.prototype.flatmap": "^1.2.1",
     "cors": "^2.8.4",
+    "crawler": "^1.1.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "forever": "^0.15.3",
