--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "@google-cloud/translate": "^1.1.0",
     "@google-cloud/vision": "^0.20.0",
-    "array.prototype.flatmap": "^1.2.1",
     "cors": "^2.8.4",
     "crawler": "^1.1.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "flatmap": "^0.0.3",
     "forever": "^0.15.3",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
